tests/machine/x/c/sum_builtin.error
line: 0
error: output mismatch
-- got --
6.9527114748225551e-310
-- want --
6
   1: #include <stdio.h>
